# Student_Record_System

./: CMakeLists.txt  README.md  main.c
Admin/: Admin.c  Admin.h
App/: App.c  App.h  main.c
Filehandling/: AdminDatabase.txt  Filehandling.c  Filehandling.h
Libraries/: Libraries.h
Linked_List/: Linked_List.c  Linked_List.h  Struct.h
Program/: Program.c  Program.h
Program/Validation/: Validation.c  Validation.h
Struct/: Struct.h
Student/: Student.c  Student.h
User/Admin/: Admin.c  Admin.h
User/Student/: Student.c  Student.h
Validation/: Validation.c  Validation.h
